# ugfx-teensy-ili9341

./: .gitattributes  .gitignore  .gitmodules  AUTHORS  COPYING  EXTERNALS.csv  Makefile.am  README.externals  README.md  configure.ac  externals.sh  ugfx.mk
data/guislice/: guislice.ino  guislice.prj
src/: ILI9341-driver.hh  Makefile.am  ftm.cc  ftm.hh  main.cc  pinconf.h  pins.hh  servocontroller.hh
src/ugfx-bindings/: gdisp_lld_ILI9341.cpp  gdisp_lld_ILI9341_vmt.c  gdisp_lld_config.h  gfx.h  gfxconf.h  gmouse_lld_MCU_board.cpp  gmouse_lld_MCU_board.h
tools/: .gitignore  Makefile.am
tools/GUIsliceBuilder/: GUIslice.sh
tools/GUIsliceBuilder/lib/: startup.template
